source/references/2.7.23/man/apply.markdown
---
layout: default
nav: references_man.html
title: puppet apply Man Page
---

<div class='mp'>
<h2 id="NAME">NAME</h2>
<p class="man-name">
  <code>puppet-apply</code> - <span class="man-whatis">Apply Puppet manifests locally</span>
</p>

<h2 id="SYNOPSIS">SYNOPSIS</h2>

<p>Applies a standalone Puppet manifest to the local system.</p>

<h2 id="USAGE">USAGE</h2>

<p>puppet apply [-h|--help] [-V|--version] [-d|--debug] [-v|--verbose]
  [-e|--execute] [--detailed-exitcodes] [-l|--logdest <var>file</var>]
  [--apply <var>catalog</var>] [--catalog <var>catalog</var>] <var>file</var></p>

<h2 id="DESCRIPTION">DESCRIPTION</h2>

<p>This is the standalone puppet execution tool; use it to apply
individual manifests.</p>

<p>When provided with a modulepath, via command line or config file, puppet
apply can effectively mimic the catalog that would be served by puppet
master with access to the same modules, although there are some subtle
differences. When combined with scheduling and an automated system for
pushing manifests, this can be used to implement a serverless Puppet
site.</p>

<p>Most users should use 'puppet agent' and 'puppet master' for site-wide
manifests.</p>

<h2 id="OPTIONS">OPTIONS</h2>

<p>Note that any configuration parameter that's valid in the configuration
file is also a valid long argument. For example, 'modulepath' is a
valid configuration parameter, so you can specify '--tags <var>class</var>,<var>tag</var>'
as an argument.</p>

<p>See the configuration file documentation at
http://docs.puppetlabs.com/references/stable/configuration.html for the
full list of acceptable parameters. A commented list of all
configuration options can also be generated by running puppet with
'--genconfig'.</p>

<dl>
<dt class="flush">--debug</dt><dd><p>Enable full debugging.</p></dd>
<dt>--detailed-exitcodes</dt><dd><p>Provide transaction information via exit codes. If this is enabled, an exit
code of '2' means there were changes, an exit code of '4' means there were
failures during the transaction, and an exit code of '6' means there were both
changes and failures.</p></dd>
<dt class="flush">--help</dt><dd><p>Print this help message</p></dd>
<dt>--loadclasses</dt><dd><p>Load any stored classes. 'puppet agent' caches configured classes
(usually at /etc/puppet/classes.txt), and setting this option causes
all of those classes to be set in your puppet manifest.</p></dd>
<dt>--logdest</dt><dd><p>Where to send messages. Choose between syslog, the console, and a log
file. Defaults to sending messages to the console.</p></dd>
<dt>--execute</dt><dd><p>Execute a specific piece of Puppet code</p></dd>
<dt>--verbose</dt><dd><p>Print extra information.</p></dd>
<dt class="flush">--apply</dt><dd><p>Apply a JSON catalog (such as one generated with 'puppet master --compile'). You can
either specify a JSON file or pipe in JSON from standard input. Deprecated, please
use --catalog instead.</p></dd>
<dt>--catalog</dt><dd><p>Apply a JSON catalog (such as one generated with 'puppet master --compile'). You can
either specify a JSON file or pipe in JSON from standard input.</p></dd>
</dl>


<h2 id="EXAMPLE">EXAMPLE</h2>

<pre><code>$ puppet apply -l /tmp/manifest.log manifest.pp
$ puppet apply --modulepath=/root/dev/modules -e "include ntpd::server"
$ puppet apply --catalog catalog.json
</code></pre>

<h2 id="AUTHOR">AUTHOR</h2>

<p>Luke Kanies</p>

<h2 id="COPYRIGHT">COPYRIGHT</h2>

<p>Copyright (c) 2011 Puppet Labs, LLC Licensed under the Apache 2.0 License</p>

</div>
